--- a/css/segunda-pag.css
+++ b/css/segunda-pag.css
@@ -1,5 +1,8 @@
 .container{
     background-color: rgb(190, 135, 241);
-    width: 200vh;
     height: 100%;
+    width: 200vh;
+   max-width: 600px;
+   min-width: 200px;
+   max
 }
