--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,4 @@ p, li, h1 {
     border-radius: 50%;
 }
 /*Width (altura), Height (largura) Para controla a miníma e máxima usar min-max*/
+/*Para entender bem sobre o que é a medida em assistir aula 14 módulo 2*/
