--- a/css/styles.css
+++ b/css/styles.css
@@ -48,5 +48,5 @@ p, li, h1 {
     height: 40px;
     border-radius: 50%;
 }
-/*Width (altura), Height (largura) Para controla a miníma e máxima usar min-max*/
+/*Width (largura), Height (altura) Para controla a miníma e máxima usar min-max*/
 /*Para entender bem sobre o que é a medida em assistir aula 14 módulo 2*/
