--- a/css/segunda-pag.css
+++ b/css/segunda-pag.css
@@ -16,3 +16,12 @@ div {
     margin: 10px;
     display: inline-block;
 }
+
+.none {
+     background: red;
+     width: 200px;
+     height: 200px;
+     display: none;
+     /*Quando usado display none o elemento fica invisível na tela*/
+     /*Elemento visibiliry hidden faz com que a inspeção do elemento apareça mas não o conteúdo*/
+}
