--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 /*Segue uma importação de google fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 
+/*Border= borda da caixa
+margin=margem fora da caixa
+padding= espaço dentro da caixa*/
 body {
     font-family: 'Redressed', cursive;
 }
