--- a/exercicio-grid.css
+++ b/exercicio-grid.css
@@ -16,3 +16,33 @@ html, body {
 :root {
     --dark-blue: #1d1d1d;
 }
+
+body {
+    margin: 50px;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+
+    
+   
+}
+
+.iphone-container {
+    width: 250px;
+    height: 500px;
+    background: rgb(49, 49, 49);
+    border-radius: 40px;
+    border-style: solid; 
+    border-color:  black;
+    border-width: 11px;
+}
+
+.iphone-container .iphone-notch {
+width: 120px;
+height: 20px;
+background: black;
+border-radius: 0 0 15px 15px;
+margin-left: auto;
+margin-right: auto;
+}
+   
