--- a/exercicio-grid.css
+++ b/exercicio-grid.css
@@ -13,18 +13,11 @@ html, body {
 
 }
 
-:root {
-    --dark-blue: #1d1d1d;
-}
-
 body {
     margin: 50px;
     justify-content: center;
     text-align: center;
     display: flex;
-
-    
-   
 }
 
 .iphone-container {
@@ -35,14 +28,24 @@ body {
     border-style: solid; 
     border-color:  black;
     border-width: 11px;
+    position: relative;
 }
 
-.iphone-container .iphone-notch {
-width: 120px;
-height: 20px;
-background: black;
-border-radius: 0 0 15px 15px;
-margin-left: auto;
-margin-right: auto;
+.iphone-container .notch {
+    width: 120px;
+    height: 20px;
+    background: black;
+    border-radius: 0 0 15px 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
-   
+  
+.iphone-container .menu {
+    width: 60px;
+    height: 2px;
+    background: white;
+    border-radius: 20px;
+    position: absolute;
+    bottom: 20px;
+    left: calc(50% - 30px);
+}
