--- a/exercicio-grid.css
+++ b/exercicio-grid.css
@@ -39,15 +39,8 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-.iphone-container .cabecalho {
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-    color: white;
-}
 
-.iphone-container .cabecalho span {
-    color: white;
-}
+
   
 .iphone-container .menu {
     width: 60px;
@@ -85,12 +78,18 @@ font-size: 12px;
 
 h3{
     font-size: 17px
+    
+
 }
 
 .iphone-container .week {
     color: white;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    margin-top: 0;
+    text-align: left;
+    margin-left: 10px;
+     margin-top: 150px;
+     position: absolute;
+    
     
 }
