--- a/exercicio-grid.css
+++ b/exercicio-grid.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 body {
-    margin: 50px;
+    height: 100vh;
     justify-content: center;
     text-align: center;
     display: flex;
@@ -60,9 +60,11 @@ body {
 }
 .iphone-container h1, h4, p, h3{
     color: white;
-    margin: 5px;
 }
 
+h2, h4 {
+    margin: 5px;
+}
 p {
     font-size: 13px;
 }
@@ -88,7 +90,7 @@ h3{
     grid-template-columns: 3fr 1fr;
     text-align: left;
     margin-left: 10px;
-     margin-top: 150px;
+     margin-top: 70px;
      position: absolute;
     
     
