--- a/exercicio-grid.css
+++ b/exercicio-grid.css
@@ -20,15 +20,17 @@ body {
     display: flex;
 }
 
+/*Nesse elemento foi preciso simplificar o uso de border, acrescentar o color*/
 .iphone-container {
     width: 250px;
     height: 500px;
     background: rgb(49, 49, 49);
-    border-radius: 40px;
-    border-style: solid; 
-    border-color:  black;
-    border-width: 11px;
+    border-radius: 25px;
+    border: 15px solid black;
     position: relative;
+    color: white;
+    text-align: center;
+    margin-top: 60px;
 }
 
 .iphone-container .notch {
@@ -53,14 +55,12 @@ body {
 }
 
 .iphone-container svg{
-    color: white;
+    
     width: 50px;
     height: 15px;
-    text-align: center;
+    margin: 40px 0 20px;
 }
-.iphone-container h1, h4, p, h3{
-    color: white;
-}
+
 
 h2, h4 {
     margin: 5px;
@@ -85,13 +85,16 @@ h3{
 }
 
 .iphone-container .week {
-    color: white;
+   
     display: grid;
     grid-template-columns: 3fr 1fr;
-    text-align: left;
+     /*Espaço entre as grades*/
+    text-align: lcenter;
     margin-left: 10px;
-     margin-top: 70px;
-     position: absolute;
+    position: absolute;
+    font-size: 14px;
+    margin-top: 50px;
+
     
     
 }
